--- a/config.env
+++ b/config.env
@@ -3,3 +3,8 @@ PORT = 6000
 DATABASE= mongodb+srv://pds:javarnd@cluster0.5cigz.mongodb.net/pds?retryWrites=true&w=majority
 # DATABASE_LOCAL=mongodb://localhost:27017/productManagement
 DATABASE_PASSWORD=javarnd
+
+JWT_SECRET=qazws,xed;crfv.tgb_yhnu/jmiko-lp
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
+
