--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
   "name": "POS_BE",
   "version": "1.0.0",
-  "description": "Backend for Pizza Ordering System",
-  "main": "index.js",
+  "description": "Product Management System",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon server.js",
+    "start:prod": "set NODE_ENV=production& nodemon server.js",
+    "debug": "ndb server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nikhiljavarnd/POS_BE.git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "Java R&D",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nikhiljavarnd/POS_BE/issues"
-  },
-  "homepage": "https://github.com/nikhiljavarnd/POS_BE#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "eslint": "^8.5.0",
+    "express": "^4.17.1",
+    "express-mongo-sanitize": "^2.1.0",
+    "express-rate-limit": "^5.5.1",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.13",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.3",
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
@@ -29,15 +35,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "express": "^4.17.2",
-    "express-mongo-sanitize": "^2.1.0",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.2",
-    "morgan": "^1.10.0",
-    "prettier": "^2.5.1",
-    "validator": "^13.7.0",
-    "xss-clean": "^0.1.1"
+    "prettier": "^2.5.0"
   }
 }
