Created router and model for pizza CRUD

--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 NODE_ENV = development
 PORT = 6000
-DATABASE= mongodb+srv://pds:javarnd@cluster0.5cigz.mongodb.net/pds?retryWrites=true&w=majority
+DATABASE= mongodb+srv://suraj:suraj123@pms.athzb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 # DATABASE_LOCAL=mongodb://localhost:27017/productManagement
 DATABASE_PASSWORD=javarnd
 
