--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mocha": "^9.1.3",
     "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
+    "ndb": "^1.1.5",
+    "nodemon": "^2.0.15",
     "slugify": "^1.6.3",
     "supertest": "^6.1.6",
     "validator": "^13.7.0",
