--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.13",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "ndb": "^1.1.5",
     "nodemon": "^2.0.15",
     "slugify": "^1.6.3",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
